[project]
name = "wkenv"
version = "0.0.1"
authors = [{ name = "Yifei Kong", email = "kong@yifei.me" }]
description = "WebKit based JavaScript environment for executing API-signing algorithms, such as jsvmp."
license = { file = "LICENSE" }
dependencies = [
    "pyside6"
]
readme = "README.md"
requires-python = ">=3.8"
urls = { "repository" = "https://github.com/yifeikong/wkenv" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[project.optional-dependencies]
dev = [
]
build = [
    "cibuildwheel",
    "wheel",
]
test = [
]


[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["wkenv"]

[tool.pytest.ini_options]
# pythonpath = [ "." ]
asyncio_mode = "auto"


[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]
